[IMG-2340] review fix
Signed-off-by: marifunf <marianne.funfrock@rte-france.com>